# services/web-api/src/controllers/product.rs
@@ -1,7 +1,7 @@
 use actix_web::{
-    get,
+    get, post,
     web::{Data, Json, Query},
-    Scope,
+    HttpResponse, Scope,
 };
 use serde::Deserialize;
 use sqlx::{Pool, Postgres};
@@ -16,6 +16,7 @@ pub fn scope() -> Scope {
         .service(find_all)
         .service(find_all_created)
         .service(find_all_favorite)
+        .service(delete_by_id)
 }
 
 #[derive(Debug, Deserialize)]
@@ -107,4 +108,23 @@ async fn find_all_favorite(
     let foods = products.iter().map(ProductShort::new).collect();
 
     Ok(Json(foods))
+}
+
+#[derive(Debug, Deserialize)]
+pub struct DeleteProductPayload {
+    id: i64,
+}
+
+#[post("/delete")]
+async fn delete_by_id(
+    payload: Json<DeleteProductPayload>,
+    db_pool: Data<Pool<Postgres>>,
+) -> Result<HttpResponse, Error> {
+    let mut txn = db_pool.begin().await?;
+
+    Product::delete_by_id(payload.id, &mut txn).await?;
+
+    txn.commit().await?;
+
+    Ok(HttpResponse::NoContent().finish())
 }
